[package]
name = "rust-kelly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
